--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,11 +1,89 @@
 @use "base/variables" as v;
+@use "base/mixins" as m;
 
 .footer {
-    background-color: v.$secundario;
-    padding: 2rem 0;
-    p {
-        margin: 0;
-        color: v.$blanco;
-        text-align: center;
+  background: linear-gradient(135deg, v.$principal 0%, v.$secundario 100%);
+  padding: 3rem 0;
+  position: relative;
+  overflow: hidden;
+
+  // Elementos decorativos
+  &::before {
+    content: "";
+    position: absolute;
+    width: 20rem;
+    height: 20rem;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.05);
+    top: -10rem;
+    left: -10rem;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 15rem;
+    height: 15rem;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.05);
+    bottom: -7.5rem;
+    right: -7.5rem;
+  }
+
+  .contenedor {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include m.tablet {
+      flex-direction: row;
+      justify-content: space-between;
     }
+  }
+
+  p {
+    margin: 0;
+    color: v.$blanco;
+    text-align: center;
+    font-size: 1.6rem;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -0.5rem;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 5rem;
+      height: 2px;
+      background-color: rgba(255, 255, 255, 0.3);
+
+      @include m.tablet {
+        display: none;
+      }
+    }
+  }
+
+  .redes-sociales {
+    display: flex;
+    gap: 2rem;
+    margin-top: 2rem;
+
+    @include m.tablet {
+      margin-top: 0;
+    }
+
+    a {
+      color: v.$blanco;
+      font-size: 2.4rem;
+      transition: v.$transicion;
+
+      &:hover {
+        color: v.$acento;
+        transform: translateY(-3px);
+      }
+    }
+  }
 }
