--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -30,7 +30,6 @@ p {
   width: 95%;
   max-width: 120rem;
   margin: 0 auto;
-  margin-top: 4rem;
   padding: 0 2rem; // Añadir padding horizontal
 }
 a {
@@ -125,4 +124,8 @@ input[type="number"] {
 .margin-resultado {
   margin-top: 4rem !important;
   margin-bottom: 4rem !important;
+}
+
+.margin-top {
+  margin-top: 4rem;
 }
