--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -25,6 +25,7 @@ p {
   color: #1e293b; // Color de texto más suave
   line-height: 1.6;
   margin-bottom: 2rem;
+  font-size: 2rem !important;
 }
 .contenedor {
   width: 95%;
