--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -72,7 +72,7 @@
       margin: 0 0 1.5rem;
       color: v.$blanco;
       text-align: left;
-      font-size: 1.5rem;
+      font-size: 1.8rem !important;
       line-height: 1.6;
       opacity: 0.9;
     }
@@ -89,7 +89,7 @@
       a {
         color: v.$blanco;
         opacity: 0.8;
-        font-size: 1.5rem;
+        font-size: 1.7rem;
         transition: v.$transicion;
         display: flex;
         align-items: center;
