--- a/src/scss/layout/_que-simular.scss
+++ b/src/scss/layout/_que-simular.scss
@@ -105,17 +105,7 @@
     position: relative;
     padding-left: 1rem;
     line-height: 1.6;
-
-    &::before {
-      content: "";
-      position: absolute;
-      left: -1rem;
-      top: 0.9rem;
-      width: 0.6rem;
-      height: 0.6rem;
-      background-color: v.$principal;
-      border-radius: 50%;
-    }
+    font-size: 1.8rem;
   }
 }
 
